view: feito o css reset

--- a/index.html
+++ b/index.html
@@ -13,23 +13,55 @@
         <section id="lista-de-afazeres">
             <div id="coluna1">
                 <div id="barra-de-busca">
-                    <input type="search">
-                    <button id="buscar"></button>
+                    <input type="search" placeholder="Busque uma tarefa">
+                    <button></button>
                 </div>
                 <div id="gerenciador">
                     <div id="adicionar-tarefa">
-                        <button id="criar"></button>
-                        <input type="text">
+                        <button></button>
+                        <input type="text" placeholder="Adicione uma tarefa">
                     </div>
                     <div id="tarefas-pendentes">
                         <!---
                         TAREFA1
-                        Vão estar não checadas
+                        Vão estar não checadas--->
                         <div>
                             <input type="checkbox" id="" name="">
-                            <label for=""></label>
+                            <label for="">Ir a escola amanhã de manhã ver se eu estou sonhando</label>
                         </div>
-                        --->
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Lanchar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="" name="">
+                            <label for="">Estudar</label>
+                        </div>
+                        <!----->
                     </div>
                 </div>
             </div>
@@ -38,14 +70,64 @@
                 <div id="tarefas-concluidas">
                     <!---
                     TAREFA CONCLUIDA 1
-                    Vão estar checadas
+                    Vão estar checadas--->
                     <div>
                         <input type="checkbox" id="" name="">
-                        <label for=""></label>
+                        <label for="">Esperar</label>
                     </div>
-                    --->
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Ler</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Descansar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="" name="">
+                        <label for="">Estudar</label>
+                    </div>
+                    <!------>
                 </div>
             </div>
         </section>
+
+        <script src="script.js"></script>
     </body>
 </html>
