feat: feito o sistema de adicao de tarefas

--- a/index.html
+++ b/index.html
@@ -24,44 +24,8 @@
                     <div id="tarefas-pendentes">
                         <!---
                         TAREFA1
-                        Vão estar não checadas--->
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Ir a escola amanhã de manhã ver se eu estou sonhando</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Lanchar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="" name="">
-                            <label for="">Estudar</label>
-                        </div>
-                        <!----->
+                        Vão estar não checadas
+                        --->
                     </div>
                 </div>
             </div>
@@ -70,60 +34,8 @@
                 <div id="tarefas-concluidas">
                     <!---
                     TAREFA CONCLUIDA 1
-                    Vão estar checadas--->
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Esperar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Ler</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Descansar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="" name="">
-                        <label for="">Estudar</label>
-                    </div>
-                    <!------>
+                    Vão estar checadas
+                    --->
                 </div>
             </div>
         </section>
