--- a/index.html
+++ b/index.html
@@ -19,25 +19,24 @@
                 <div id="gerenciador">
                     <div id="adicionar-tarefa">
                         <button></button>
-                        <input type="text" placeholder="Adicione uma tarefa">
+                        <input type="text" placeholder="Adicione uma tarefa" maxlength="12">
                     </div>
                     <div id="tarefas-pendentes">
-                        <!---
-                        TAREFA1
-                        Vão estar não checadas
-                        --->
+                        
                     </div>
                 </div>
             </div>
             <div id="coluna2">
                 <h6>CONCLUÍDAS</h6>
                 <div id="tarefas-concluidas">
-                    <!---
-                    TAREFA CONCLUIDA 1
-                    Vão estar checadas
-                    --->
+
                 </div>
             </div>
+            <!--
+            <div id="dica">
+                <span>Ctrl +</span>
+            </div>
+            -->
         </section>
 
         <script src="script.js"></script>
