feat: adicionado o tutorial e versao de entrega pronta

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div id="gerenciador">
                     <div id="adicionar-tarefa">
                         <button></button>
-                        <input type="text" placeholder="Adicione uma tarefa" maxlength="12">
+                        <input type="text" placeholder="Adicione uma tarefa">
                     </div>
                     <div id="tarefas-pendentes">
                         
@@ -32,11 +32,9 @@
 
                 </div>
             </div>
-            <!--
             <div id="dica">
                 <span>Ctrl +</span>
             </div>
-            -->
         </section>
 
         <script src="script.js"></script>
